feat(hero): mejorar responsividad

--- a/index.html
+++ b/index.html
@@ -4,30 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Mundo Cerámico — Catálogo en Barranquilla</title>
-    <meta name="description" content="Cerámica y porcelanato para interiores y exteriores. Asesoría por WhatsApp. Barranquilla — Lun–Sáb 8:00–17:00." />
+    <title>Todo Cerámico — Catálogo</title>
+    <meta name="description" content="Cerámica y porcelanato para interiores y exteriores. Asesoría por WhatsApp." />
     <meta name="color-scheme" content="light dark" />
 
-    <!-- Favicon e íconos -->
     <link rel="icon" href="/logo-mc.svg" type="image/svg+xml" />
-    <link rel="icon" href="/icons/favicon-32.png" sizes="32x32" type="image/png" />
-    <link rel="apple-touch-icon" href="/icons/apple-touch-180.png" sizes="180x180" />
-
-    <!-- PWA -->
     <link rel="manifest" href="/manifest.webmanifest" />
 
-    <!-- Open Graph -->
+
+    <!-- Tienes estos archivos en /public/icons/ según tu repo -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-180.png" />
+    <!-- (Opcional, por compatibilidad antigua) -->
+    
+    <!-- Canonical / OG / Twitter -->
+    <link rel="canonical" href="https://catalogo-todo-ceramico.vercel.app/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Mundo Cerámico — Catálogo" />
+    <meta property="og:title" content="Todo Cerámico — Catálogo" />
     <meta property="og:description" content="Cerámica que transforma tus espacios. Cotiza por WhatsApp." />
     <meta property="og:image" content="/og-cover.png" />
-    <meta property="og:url" content="https://TU-DOMINIO/" />
-
-    <!-- Twitter -->
+    <meta property="og:url" content="https://catalogo-todo-ceramico.vercel.app/" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Mundo Cerámico — Catálogo" />
+    <meta name="twitter:title" content="Todo Cerámico — Catálogo" />
     <meta name="twitter:description" content="Cerámica que transforma tus espacios. Cotiza por WhatsApp." />
     <meta name="twitter:image" content="/og-cover.png" />
+
+    <!-- JSON-LD (si ya lo usas inline o externo, mantenlo aquí) -->
+    <!-- <script type="application/ld+json"> ... </script> -->
   </head>
   <body>
     <div id="root"></div>
